--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -12,31 +12,32 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.1.0",
+		"@sveltejs/kit": "^2.3.3",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.19.0",
+		"@typescript-eslint/parser": "^6.19.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
-		"postcss": "^8.4.32",
+		"postcss": "^8.4.33",
 		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
+		"prettier": "^3.2.3",
 		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.6",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"prettier-plugin-tailwindcss": "^0.5.11",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.3",
+		"svelte-headless-table": "^0.18.1",
+		"tailwindcss": "^3.4.1",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.11"
 	},
 	"type": "module",
 	"dependencies": {
-		"@carbon/charts-svelte": "^1.13.21",
+		"@carbon/charts-svelte": "^1.13.22",
 		"bits-ui": "^0.14.0",
 		"clsx": "^2.1.0",
 		"d3": "^7.8.5",
